--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -6,8 +6,10 @@
 }
 
 .postImg {
-  width: 385px;
-  height: 280px;
+  /* width: 385px;
+  height: 280px; */
+  width: 100%;
+  height: auto;
   object-fit: cover;
   border-radius: 7px;
 }
