--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -32,8 +32,10 @@
 
 .sidebarItem > img {
   margin-top: 15px;
-  width: 250px;
-  height: 250px;
+  /* width: 250px;
+  height: 250px; */
+  width: 100%;
+  height: 2vm
 }
 
 .sidebarItem > p {
